--- a/app/salesorders/webapp/i18n/i18n.properties
+++ b/app/salesorders/webapp/i18n/i18n.properties
@@ -7,3 +7,9 @@ appTitle=Sales Orders
 
 #YDES: Application description
 appDescription=Manage Sales Orders
+
+#XFLD,36
+JCDsalesorder-manage.flpTitle=Sales Orders
+
+#XFLD,57
+JCDsalesorder-manage.flpSubtitle=Manage sales orders
